disable calendar (broken) & fix image stretching

--- a/src/app/(player)/player/_videoBrowser/shared/seasonList/performanceList/performance.module.scss
+++ b/src/app/(player)/player/_videoBrowser/shared/seasonList/performanceList/performance.module.scss
@@ -34,6 +34,9 @@
   border-radius: 10px;
   position: relative;
   display: flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &[data-new="true"]:after {
     content: "New";
@@ -52,7 +55,7 @@
 
 .img {
   width: 100px;
-  height: auto;
+  height: 56px;
   border-radius: 10px;
 }
 
